[package]
name = "fahapi"
version = "0.1.2"
authors = ["Makoto <makoto@emurasoft.com>"]
edition = "2018"
description = "Folding@home client API wrapper for Rust"
license = "MIT"
repository = "https://github.com/MakotoE/rust-fahapi"
keywords = ["foldingathome"]
readme = "README.md"

[features]
all-tests = [] # Run tests that will modify your FAH settings

[[bench]]
name = "benchmark"
path = "src/lib.rs"
harness = false

[dependencies]
bytes = "0.5"
lazy_static = "1.4"
regex = "1"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
chrono = "0.4"
error-chain = "0.12.2"
bencher = "0.1"
humantime = "2.0"
